@@ -97,13 +97,11 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 
 		return state.map(stateObject -> {
 
-			if (stateObject instanceof VaultToken) {
-				return (VaultToken) stateObject;
+			if (stateObject instanceof VaultToken token) {
+				return token;
 			}
 
-			if (stateObject instanceof VaultResponse) {
-
-				VaultResponse response = (VaultResponse) stateObject;
+			if (stateObject instanceof VaultResponse response) {
 
 				Assert.state(response.getAuth() != null, "Auth field must not be null");
 
@@ -111,7 +109,7 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 			}
 
 			throw new IllegalStateException(
-					String.format("Cannot retrieve VaultToken from authentication chain. Got instead %s", stateObject));
+                    "Cannot retrieve VaultToken from authentication chain. Got instead %s".formatted(stateObject));
 		}).onErrorMap(t -> new VaultLoginException("Cannot retrieve VaultToken from authentication chain", t));
 	}
 
@@ -123,24 +121,24 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 		for (Node<?> o : steps) {
 
 			if (logger.isDebugEnabled()) {
-				logger.debug(String.format("Executing %s with current state %s", o, state));
+				logger.debug("Executing %s with current state %s".formatted(o, state));
 			}
 
-			if (o instanceof HttpRequestNode) {
-				state = state.flatMap(stateObject -> doHttpRequest((HttpRequestNode<Object>) o, stateObject));
+			if (o instanceof HttpRequestNode node) {
+				state = state.flatMap(stateObject -> doHttpRequest(node, stateObject));
 			}
 
-			if (o instanceof MapStep) {
-				state = state.map(stateObject -> doMapStep((MapStep<Object, Object>) o, stateObject));
+			if (o instanceof MapStep step) {
+				state = state.map(stateObject -> doMapStep(step, stateObject));
 			}
 
-			if (o instanceof ZipStep) {
-				state = state.zipWith(doZipStep((ZipStep<Object, Object>) o))
+			if (o instanceof ZipStep step) {
+				state = state.zipWith(doZipStep(step))
 					.map(it -> Pair.of(it.getT1(), it.getT2()));
 			}
 
-			if (o instanceof OnNextStep) {
-				state = state.doOnNext(stateObject -> doOnNext((OnNextStep<Object>) o, stateObject));
+			if (o instanceof OnNextStep step) {
+				state = state.doOnNext(stateObject -> doOnNext(step, stateObject));
 			}
 
 			if (o instanceof ScalarValueStep<?>) {
@@ -152,7 +150,7 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 			}
 
 			if (logger.isDebugEnabled()) {
-				logger.debug(String.format("Executed %s with current state %s", o, state));
+				logger.debug("Executed %s with current state %s".formatted(o, state));
 			}
 		}
 		return state;
@@ -230,7 +228,7 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 				return (Object) result;
 			})
 			.onErrorMap(IOException.class, e -> new VaultException(
-					String.format("Credential retrieval from %s failed", resourceSupplier.getResource()), e));
+                "Credential retrieval from %s failed".formatted(resourceSupplier.getResource()), e));
 	}
 
 	enum Undefinded {
