@@ -77,7 +77,7 @@ public class UsernamePasswordAuthentication implements ClientAuthentication, Aut
 		Map<String, Object> body = createLoginBody(options);
 
 		return AuthenticationSteps.fromSupplier(() -> body)
-			.login(String.format("%s/%s", getLoginPath(options.getPath()), options.getUsername()));
+			.login("%s/%s".formatted(getLoginPath(options.getPath()), options.getUsername()));
 	}
 
 	@Override
@@ -94,7 +94,7 @@ public class UsernamePasswordAuthentication implements ClientAuthentication, Aut
 
 		try {
 			VaultResponse response = restOperations.postForObject(
-					String.format("%s/%s", getLoginPath(options.getPath()), options.getUsername()),
+                    "%s/%s".formatted(getLoginPath(options.getPath()), options.getUsername()),
 					createLoginBody(options), VaultResponse.class);
 
 			logger.debug("Login successful using username and password credentials");
@@ -102,8 +102,8 @@ public class UsernamePasswordAuthentication implements ClientAuthentication, Aut
 			return LoginTokenUtil.from(response.getAuth());
 		}
 		catch (HttpStatusCodeException e) {
-			throw new VaultException(String.format("Cannot login using username and password: %s",
-					VaultResponses.getError(e.getResponseBodyAsString())), e);
+			throw new VaultException("Cannot login using username and password: %s".formatted(
+                    VaultResponses.getError(e.getResponseBodyAsString())), e);
 		}
 	}
 
