@@ -80,7 +80,7 @@ class AppRoleAuthenticationIntegrationTests extends AppRoleAuthenticationIntegra
 
 		String roleId = getRoleId("with-secret-id");
 		String secretId = (String) getVaultOperations()
-			.write(String.format("auth/approle/role/%s/secret-id", "with-secret-id"), null)
+			.write("auth/approle/role/%s/secret-id".formatted("with-secret-id"), null)
 			.getRequiredData()
 			.get("secret_id");
 
